# json-data-encoding

./: .gitlab-ci.yml  README.md  dune-project  json-data-encoding-browser.opam  json-data-encoding-bson.opam  json-data-encoding.opam
src/: dune  json_encoding.ml  json_encoding.mli  json_query.ml  json_repr.ml  json_repr_browser.ml  json_repr_browser.mli  json_repr_bson.ml  json_repr_bson.mli  json_schema.ml  json_schema.mli  list_map.ml  list_map.mli  list_override.ml
test/: dune  test_big_streaming.ml  test_generated.ml  test_list_map.ml  test_list_map_side_effects.ml  test_mu.ml  test_seq_is_lazy.ml
test-bson/: dune
