opam-version: "2.0"
name: "json-data-encoding-browser"
synopsis: "Type-safe encoding to and decoding from JSON (browser support)"
maintainer: "contact@nomadic-labs.com"
authors: [ "Nomadic Labs" "Ocamlpro" ]
homepage: "https://gitlab.com/nomadic-labs/json-data-encoding"
bug-reports: "https://gitlab.com/nomadic-labs/json-data-encoding/issues"
license: "LGPLv3 w/ linking exception"
dev-repo: "git+https://gitlab.com/nomadic-labs/json-data-encoding"

build: [
  ["dune" "build" "-j" jobs "-p" name]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.7"}
  "json-data-encoding" {= version }
  "js_of_ocaml" {>= "3.3.0"}
  "crowbar" { with-test }
]
